# SRX-Audit

./: README.md  pyproject.toml  tasks.py
files/docker/: Dockerfile  requirements.txt
files/nornir/: app.py  config.yaml
files/nornir/defaults/: defaults.yaml
files/nornir/groups/: groups.yaml
files/nornir/inventory/: hosts.yaml
